# neigui

./: .gitattributes  .gitignore  CLAUDE.md  README.md
backend/: .env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/routes/: broker.py  chip.py  daytrade_fee.py  market.py  options.py  symbols.py  warrants.py
backend/scripts/: bench_options_page.py  bench_warrant_api.py  measure_startup.py  perf_baseline.py
backend/services/: broker_flows.py  clock.py  daytrade_fee.py  finmind.py  finmind_fake.py  finmind_futures.py  finmind_options.py  finmind_realtime.py  industry_chain.py  market_breadth.py  market_today.py  market_universe.py  rate_limiter.py  sector_aggregation.py  trading_calendar.py  trading_session.py  warrant_brokers.py  warrant_flow.py  warrant_flow_history.py  warrant_issuers.py  warrant_iv_drift.py  warrant_iv_history.py  warrant_pricing.py  warrant_quotes.py  warrants.py
backend/tests/: conftest.py  test_broker_flows.py  test_broker_history.py  test_broker_routes.py  test_brokers_window.py  test_cache.py  test_chip_broker_history_route.py  test_chip_routes.py  test_daytrade_fee.py  test_daytrade_fee_routes.py  test_fake_finmind_manifest.py  test_finmind.py  test_finmind_cancel.py  test_finmind_futures.py  test_finmind_options.py  test_finmind_realtime.py  test_finmind_window_cache.py  test_gzip.py  test_industry_chain.py  test_market_breadth.py  test_market_routes.py  test_market_today.py  test_market_universe.py  test_options_routes.py  test_options_routes_clock.py  test_sector_aggregation.py  test_symbols_route.py  (+14 more)
(+796 files in other folders)
