[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trash-cmoney-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pyright>=1.1.400",
]

[tool.setuptools]
packages = ["utils", "services", "routes", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
include = ["routes", "services", "utils", "main.py"]
exclude = ["**/__pycache__", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportMissingTypeStubs = false
